# genex

./: .gitignore  CMakeLists.txt  LICENCE.txt  README.md
include/: concept_helpers.hpp  generationally_indexed_container.hpp  genex_crtp.hpp  gic_base.hpp  gic_fast_iter.hpp  gic_fit.hpp  gic_iterator.hpp  gic_with_generations.hpp  key.hpp  manually_destructed.hpp  perfect_backward.hpp  split_gic.hpp  split_gic_iterator.hpp
include/detail/: concept_helpers.hpp  element_validity_embedded_in_generation.hpp  fit_slot.hpp  genex_crtp.hpp  gic_base_forward_declaration.hpp  gic_core_access.hpp  iterator_utils.hpp  key_placeholding.hpp  manually_destructed.hpp  split_gic_iterator.hpp
tests/: CMakeLists.txt  Jamfile.v2  crtp.cpp  dummy_passing_test.cpp  finally.cpp  finally.hpp  fit_slot.cpp  gic_const_get.cpp  gic_destruction_on_raii.cpp  gic_destruction_on_removal.cpp  gic_emplace_bracket_get.cpp  gic_emplace_get.cpp  gic_fast_iter.cpp  gic_fit.cpp  gic_forward_iteration.cpp  gic_get_old_key.cpp  gic_remove_get.cpp  gic_remove_old_key.cpp  iter_const_deref_when_first_allocated.cpp  iter_deref_when_first_allocated.cpp  iter_deref_when_first_free.cpp  iter_swap.cpp  manual_destruction_wrapper_creation.cpp  manual_destruction_wrapper_destruction.cpp  manual_destruction_wrapper_emplacement.cpp  manual_destruction_wrapper_erasure.cpp  manually_destroyed.cpp  split_gic.cpp  split_gic_const_get.cpp  split_gic_destruction_on_raii.cpp  split_gic_destruction_on_removal.cpp  split_gic_emplace_bracket_get.cpp  split_gic_emplace_get.cpp  split_gic_forward_iteration.cpp  split_gic_get_old_key.cpp  split_gic_remove_get.cpp  split_gic_remove_old_key.cpp  zero_on_destruction.cpp  zero_on_destruction.hpp
tests/generic/: generic_test_definitions.hpp  gic_base.hpp  gic_base_tests.hpp  gic_iterator_tests.hpp
